# KenkuController

./: .gitignore  README  config.yaml  pyproject.toml  streamdeck.py  workspace.code-workspace
arduino_keypad/: keypad_streamdeck.ino
keypad_streamdeck/: keypad_streamdeck.ino
