[tool.poetry]
name = "streamdeck"
version = "0.1.0"
description = ""
authors = ["Thomas Vos <vossy01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
